--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -20,6 +20,8 @@ body {
     @include desktop {
         font-size: 100%;
         width: auto;
+        height: 100vh;
+        justify-content: space-between;
     }
     
     
