--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -7,6 +7,10 @@
     padding: 0.5rem 2rem 1.5rem;
     width:100%;
     box-sizing: border-box;
+    @include desktop {
+        height: 100%;
+    }
+  
     
     a {
         color: $color-white;
